# vbiji

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  release.yml
db/schema/: base.ts
docs/: ARCHITECTURE.md  IPC_REGISTRY.md
electron/preload/: index.ts
tests/: test_base.py  test_chat.py  test_cli.py  test_converter.py  test_llm_manager.py  test_prompt_manager.py  test_providers.py  test_reader.py
vbiji/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
vbiji/core/: __init__.py  converter.py  db.py  reader.py  summarizer.py  types.py
vbiji/core/ai/: __init__.py  chat.py  client.py
vbiji/core/ai/providers/: __init__.py  base.py  bigmodel.py  deepseek.py  kimi.py  minimax.py  qwen.py
vbiji/core/llm/: __init__.py  manager.py
vbiji/core/prompt/: manager.py
vbiji/core/readers/: __init__.py  base.py  docx_reader.py  md_reader.py  pdf_reader.py  txt_reader.py
